<resources>
    <string name="app_name">kotlin-test</string>
    <string name="j_aime">Like</string>
    <string name="j_aime_pas">Dislike</string>
    <string name="compl_ment">Complement</string>
    <string name="saisir_nom_ici">Input name here</string>
    <string name="android">Android</string>
    <string name="annuler">Cancel</string>
    <string name="ajouter">Add</string>
    <string name="tv">TextView</string>
    <string name="load">Load</string>
    <string name="loading" >---------</string>
    <string name="errorNotFound">[ERROR] City Not Found</string>
    <string name="city">City</string>
    <string name="weather_description">Icon that defined weather</string>
    <string name="clear_description">Icon for clear screen</string>
    <string name="fire_description">Fire (temperature)</string>
    <string name="flag_description">Flag (wind)</string>
</resources>